# road_detection_model

./: Pillow-7.2.0-cp311-cp311-linux_x86_64.whl  README.md  pyproject.toml
notebooks/: model_prototyping.ipynb
notebooks/.ipynb_checkpoints/: model_prototyping-checkpoint.ipynb
road_detection_model/: data.yaml  data_finetune.yaml  data_processing.py  live.py  main.py  train.py  validate.py
road_detection_model/runs/detect/train/: args.yaml
road_detection_model/runs/detect/train2/: args.yaml  results.csv
road_detection_model/runs/fine_tuning/train/: args.yaml
road_detection_model/runs/fine_tuning/train2/: args.yaml
road_detection_model/runs/fine_tuning/train3/: args.yaml  results.csv
