[tool.poetry]
name = "road-detection-model"
version = "0.1.0"
description = ""
authors = ["Mkoek213 <mikolaj.kolek2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
cvzone = "1.5.6"
ultralytics = "8.2.64"
hydra-core = "^1.2.0"
matplotlib = "^3.2.2"
numpy = "^1.18.5"
opencv-python = "4.8.0.74"
Pillow = "^8.0.1"
PyYAML = "^5.4.1"
requests = "^2.23.0"
scipy = "^1.4.1"
torch = "1.8.0"
torchvision = "^0.9.0"
tqdm = "^4.64.0"
filterpy = "1.4.5"
scikit-image = "0.19.3"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
